--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,13 @@ out/
 .env
 .env*.local
 
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
